--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <title>Index</title>
 </head>
 <body>
-    <form action="http://localhost:5000/predict", method ="post">
+    <form action="https://capstonestyoo.herokuapp.com/predict", method ="post">
         <input type="text" name="text" value ="I hate you">
         <input type="submit" value="값 전송">
     </form>
